# bowser-rs

./: Cargo.toml  README.md  devenv.nix  devenv.yaml  flake.nix  result
examples/: data.json  insta.json
examples/aliases/: alias.json  wowsee.json
examples/dns_forwarders/: dns.json
src/: lib.rs  main.rs  pfsense.rs
