[package]
name = "bowser"
version = "0.1.0"
edition = "2024"

[dependencies]
thirtyfour = "0.36.0"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
table-extract = "0.2.3"
scraper = "0.25.0"

